# DroK4_arm

./: CMakeLists.txt  README.md  package.xml
launch/: drok4.launch
model/solid_arm_3/: CMakeLists.txt  model.config  package.xml  solid_arm_3.sdf
model/solid_arm_3/launch/: display.launch  gazebo.launch
model/solid_arm_3/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
model/solid_arm_3/urdf/: solid_arm_3.csv  solid_arm_3.sdf  solid_arm_3.urdf
msg/: Gripper.msg
src/: 1.cpp  2.cpp  drok4_plugin.cc
src/rbdl-master/addons/urdfreader/: CMakeLists.txt
worlds/: drok4.world
